--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -4,12 +4,12 @@
 
 .contact-section {
   background-color: white;
-  padding: 80px 0; /* increased from 60px */
+  padding: 80px 0;
   font-family: Arial, sans-serif;
-  background-image: url("../assets/images/dotted-map-bg.png");
   align-content: center !important;
   background-repeat: no-repeat;
   background-position: center;
+  background-image: url("../assets/images/dotted-map-bg.png");
 }
 
 .contact-wrapper {
